# popitka

./: .gitignore  main.py  pyproject.toml
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py
users/: schemas.py  views.py
